# NamesScore

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  NamesScore.cpp  NamesScore.h  README.md  main.cpp  namesScore.cbp
res/: 10Names.txt  1Name.txt
src/: CMakeLists.txt  NamesScore.cpp  NamesScore.h  a.out  main.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  test.cpp  test.cpp.autosave  tests.cpp
test/Testing/Temporary/: CTestCostData.txt
